<resources>
    <string name="app_name">Indus Project</string>
    <string name="hello_world">placeholder text</string>
    <string name="notifications">Notifications</string>
    <string name="enter_patient_id">Enter unique identifier</string>
    <string name="enter_id">Enter Id</string>
    <string name="continue_">Continue</string>
    <string name="action_settings">Settings</string>
    <string name="action_export">Export Data</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="select_string">Select an item</string>
    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="enter_text">Enter text</string>
    <string name="submit">Submit</string>
    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="select_date">Select Date</string>
    <string name="login">Indus Project</string>
    <string name="sync">Sync</string>
    <string name="export_data">Export data</string>
    <string name="import_data">Import data</string>
    <string name="language">Language</string>
    <string name="programme">Change Programme</string>
    <string name="title_activity_location_selector">Select Program Location</string>
    <string name="title_activity_main_manu">Main Menu</string>
    <string name="title_activity_patient_info_fetcher">Fetch Patient</string>
    <string name="title_activity_select_program">Select a Program</string>
    <string name="title_activity_connection_settings">Settings</string>
    <string name="title_activity_saved_forms">Saved Forms</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_sample">Sample</string>
    <string name="title_activity_language_selector">Select Language</string>
    <string name="title_activity_patient_history">Patient History</string>
    <string name="unauthenticated_user">Unauthenticated user</string>
    <string name="title_sync_service">Syncing data</string>
    <string name="already_filled">Already filled</string>
    <string name="desc_sync_service">Downloading latest records</string>
    <string name="enter_initials">Enter initials</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="image_viewer">Image Viewer</string>
    <string name="about">About Indus Project</string>
    <string name="age">Age: </string>
    <string name="other">Other</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="wrong_credentials_provided">Wrong credentials provided</string>
    <string name="qr_code_permission_request_message">For Scanning QR Code , You need to provide permission to access your camera</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="confirm_save_form">Do you want to save the form?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="error_duplicate_identifier">You have entered a duplicate Identifier</string>
    <string name="error_no_internet_form_can_not_save">No internet! form will not save</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="tab_text_1">Day 1</string>
    <string name="tab_text_2">Day 7</string>
    <string name="tab_text_3">Day 10</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="patient_not_loaded">Patient not loaded</string>
    <string name="title_activity_qrreader">QR Code Reader</string>
    <string name="time_format"> HH:mm:ss</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="patient_registration_form">Patient Registration Form</string>
    <string name="identifier">Identifier</string>
    <string name="patient_name">Fist Name</string>
    <string name="patient_family_name">Family Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="location">Location</string>
    <string name="first_name">Given Name</string>
    <string name="last_name">Family Name</string>
    <string name="Contact_Registry">Contacts</string>
    <string name="patientID">Patient ID</string>
    <string name="age_of_contact">Age </string>
    <string name="contactNumber">Contact 1</string>
    <string name="identifier_error">Required Field</string>
    <string name="create_patient_checkbox">Do you wish to create patient?</string>
</resources>