<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:context="com.ihsinformatics.div.Login">

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/action_logout"/>

    <!--  <item
          android:id="@+id/action_export_data"
          android:orderInCategory="3"
          android:title="@string/export_data"/>
      <item
          android:id="@+id/action_import_data"
          android:orderInCategory="2"
          android:title="@string/import_data"/> -->

    <item
        android:id="@+id/action_location"
        android:orderInCategory="1"
        android:title="@string/location"/>

    <item
        android:id="@+id/action_language"
        android:orderInCategory="1"
        android:title="@string/language"/>
    <item
        android:id="@+id/action_programme"
        android:orderInCategory="1"
        android:title="@string/programme" />


    <item
        android:id="@+id/action_upload"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:icon="@drawable/ic_cloud_upload"
        android:title="@string/notifications"/>

    <item
        android:id="@+id/action_sync"
        android:orderInCategory="3"
        app:showAsAction="always"
        android:icon="@drawable/sync"
        android:title="@string/notifications"/>
    <item
        android:id="@+id/action_notifications"
        android:orderInCategory="4"
        android:actionLayout="@layout/action_notification"
        app:showAsAction="always"
        android:icon="@drawable/bell"
        android:title="@string/notifications"/>



</menu>
