<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@drawable/drop_shadow"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/llQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvNumber"
            style="@style/question_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:layout_gravity="top"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="1"
            android:textColor="@color/White" />

        <TextView
            android:id="@+id/tvQuestion"
            style="@style/question_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/name" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvMessage"
        style="@style/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llQuestion"
        android:gravity="right"
        android:text="@string/hello_world"
        android:visibility="gone" />
    <TextView
        android:layout_marginTop="7dp"
        android:id="@+id/tvFirstName"
        style="@style/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvMessage"
        android:text="@string/first_name" />
    <EditText
        android:id="@+id/etFirstsName"
        style="@style/question_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvFirstName" />

    <TextView
        android:layout_marginTop="7dp"
        android:id="@+id/tvLastName"
        style="@style/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etFirstsName"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/etLastName"
        style="@style/question_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLastName" />


</RelativeLayout>