<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    android:background="@drawable/drop_shadow"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/llQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNumberContact"
            style="@style/question_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="1"
            android:textColor="@color/White" />

        <TextView
            android:id="@+id/tvQuestionContact"
            style="@style/question_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/Contact_Registry" />
    </LinearLayout>

    <TextView
        android:id="@+id/patientID"
        style="@style/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llQuestion"
        android:layout_marginTop="7dp"
        android:text="@string/patientID" />

    <EditText
        android:id="@+id/etPatientID"
        style="@style/question_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/patientID" />

    <TextView
        android:id="@+id/patientName"
        style="@style/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPatientID"
        android:layout_marginTop="7dp"
        android:text="@string/patient_name" />

    <EditText
        android:id="@+id/etPatientName"
        style="@style/question_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/patientName" />



    <include
        android:id="@+id/ageWidget"
        layout="@layout/layout_widget_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPatientName" />


    <LinearLayout
        android:id="@+id/genderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ageWidget"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:id="@+id/contactGender"
            style="@style/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/genderWidget"
        style="@style/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:weightSum="2"
        android:layout_below="@id/genderLayout"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/female" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/spinnerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/genderWidget"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:padding="10dp">


        <TextView
            android:id="@+id/contactRelation"
            style="@style/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />
    </LinearLayout>


    <Spinner
        android:id="@+id/spRelations"
        style="@style/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerLayout" />


</RelativeLayout>