<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InputTypeSelection" >



        <EditText
            android:id="@+id/etValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="left"
            android:orientation="vertical"
            android:padding="20dp"
            android:singleLine="true"
            android:hint="@string/enter_text"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarStyle"
            android:weightSum="2" >

            <Button
                android:id="@+id/btnCancel"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textSize="26sp" />

            <Button
                android:id="@+id/btnOK"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:text="@string/ok"
                android:textSize="26sp" />
        </LinearLayout>

</LinearLayout>