<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ihsinformatics.dynamicformsgenerator.PatientInfoFetcher">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/app_gradient"
        android:gravity="center"
        android:paddingBottom="25dp"
        android:paddingTop="25dp"
        android:textSize="16sp"
        android:text="@string/title_activity_patient_info_fetcher"
        android:textColor="@color/White"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
<CheckBox
    android:id="@+id/cbSearchByProgramId"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Search by program ID"/>
        <TextView
            android:id="@+id/tvId"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/cbSearchByProgramId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/Black"
            android:text="@string/enter_patient_id" />

        <EditText
            android:id="@+id/etId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvId"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:maxLength="11" />

        <EditText
            android:id="@+id/etProgramId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etId"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:digits="0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ-_"
            android:inputType="textCapCharacters"
            android:maxLength="50" />

        <Button
            android:id="@+id/btnContinue"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etProgramId"
            android:layout_marginTop="20dp"
            android:text="@string/continue_" />
    </RelativeLayout>
</RelativeLayout>